package org.example.practicafinal.Entity;

public class Pozo extends Elemento {

    public Pozo(int tiempoActividad, Casilla casilla) {
        super(tiempoActividad, casilla);
    }

}
